--- a/style.css
+++ b/style.css
@@ -454,6 +454,7 @@ body.menu-expanded .menu {
 
   border-radius: 2rem;
   background: linear-gradient(var(--white), var(--white)) padding-box, linear-gradient(to right, var(--primary-blue), var(--primary-green)) border-box;
+  border: 0.2rem solid transparent;
   border-bottom: 1rem solid transparent;
 
   box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.10);
@@ -532,6 +533,10 @@ body.menu-expanded .menu {
 }
 
 /*=============== #contato ===============*/
+
+#contato .wrapper {
+  padding-top: 8rem;
+}
 
 #contato h2 {
   text-align: left;
