--- a/style.css
+++ b/style.css
@@ -139,7 +139,11 @@ button {
   transition: all 300ms ease;
 }
 
-.button:hover {
+#submit {
+  transition: all 300ms ease;
+}
+
+.button:hover, #submit:hover {
   transform: scale(1.1);
 }
 
@@ -195,6 +199,7 @@ header .logo-name h3 {
 }
 
 header .logo-name h3 span {
+  font-weight: 700;
   background: linear-gradient(31deg, #0098D9 0%, #3C3 100%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -208,7 +213,8 @@ header.scroll {
   background: var(--gray-headline);
 }
 
-header.scroll linearGradient stop {
+header.scroll .logo linearGradient stop,
+header.scroll .open-menu linearGradient stop {
   stop-color: white;
 }
 
@@ -231,6 +237,11 @@ body.menu-expanded > :not(header) {
   visibility: hidden;
 }
 
+body.menu-expanded .wpp {
+  opacity: 1;
+  visibility: visible;
+}
+
 .close-menu,
 body.menu-expanded .open-menu {
   display: none;
@@ -240,14 +251,35 @@ body.menu-expanded .close-menu {
   display: block;
 }
 
+body.menu-expanded .close-menu path {
+  stroke: var(--gray-headline);
+}
+
 body.menu-expanded .logo,
 body.menu-expanded button {
   position: relative;
   z-index: 100;
 }
 
-body.menu-expanded .logo path {
-  fill: #fff;
+body.menu-expanded header {
+  background: white;
+}
+
+body.menu-expanded header .logo linearGradient stop {
+  stop-color: var(--gray-headline);
+}
+
+body.menu-expanded .logo-name h3 {
+  color: var(--gray-headline);
+}
+
+body.menu-expanded header .logo-name h3 span {
+  -webkit-text-fill-color: var(--gray-headline);
+  background: none;
+}
+
+header.menu-expanded .logo linearGradient stop {
+  stop-color: var(--gray-headline);
 }
 
 .menu {
@@ -278,24 +310,20 @@ body.menu-expanded .menu {
 
   display: flex;
   flex-direction: column;
-  gap: 4.8rem;
+  gap: 6rem;
 }
 
 .options li a {
+  color: var(--gray-headline);
+  font-family: var(--font-headline);
   font-size: 2.4rem;
+  font-style: normal;
   font-weight: 700;
-  line-height: 3.1rem;
-  color: var(--brand-beige);
+  line-height: normal;
 }
 
 .menu .button {
-  margin-top: 4.8rem;
-  margin-bottom: 8rem;
-  margin-inline: auto;
-
-  background: #fff;
-
-  color: var(--brand-green);
+  margin-top: 6rem;
 }
 
 .menu .button:hover {
@@ -305,6 +333,7 @@ body.menu-expanded .menu {
 }
 
 .social-links {
+  margin-top: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -608,8 +637,8 @@ margin-top: 0.5rem;
 
 /*=============== #newsletter-ebook ===============*/
 
-#newsletter-ebook {
-
+#newsletter-ebook .wrapper {
+  padding-top: 8rem;
 }
 
 #newsletter-ebook .container {
@@ -771,4 +800,29 @@ footer .copyright {
   margin-top: 4rem;
   padding-bottom: 2rem;
   text-align: center;
+}
+
+/*=============== .wpp ===============*/
+
+.wpp {
+  display: inline-block;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 999;
+  border-radius: 50%;
+  background: #25d366;
+
+  display: grid;
+  place-items: center;
+  padding: 1rem;
+}
+
+.wpp:hover {
+  background: #128c7e;
+}
+
+.wpp svg {
+  width: 3rem;
+  height: 3rem;
 }
